# populate-admt-db

./: Dockerfile  README.md  load_all.sh  load_update.sh  pod-rebuild.yaml  pod-update.yaml  update-cron.yaml
devfiles/: BD5903629_098.nc  BD5903629_099.nc  R1901727_357.nc  R1901727_358.nc  rsyncupdates
nc2mongo/: Cargo.toml
nc2mongo/src/: error.rs  lib.rs  main.rs
nc2mongo/src/ext/: array.rs  mod.rs  variable.rs
