[package]
name = "convert_nc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netcdf = "0.9.0"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] }
tokio = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
